@startuml
skinparam classAttributeIconSize 0
skinparam classFontSize 9
skinparam linetype ortho
skinparam backgroundColor #FAFAFA
skinparam class {
  BackgroundColor #EBF5FB
  BorderColor #2196F3
  HeaderBackgroundColor #2196F3
  HeaderFontColor white
}
title Diagramme de Classes -- FreeNest (Majeur juin 2026)

class User {
  +id: int
  +name: string
  +email: string
  +role: enum[freelancer|client|admin]
  +avatar: string
  +google_id: string
  +two_factor_secret: string
  +two_factor_confirmed: boolean
  +phone: string
  +phone_verified: boolean
  +is_verified: boolean
  +connects: int
}

class FreelancerProfile {
  +title: string
  +bio: text
  +hourly_rate: decimal
  +experience_level: enum
  +avg_rating: decimal
  +total_jobs: int
  +total_earned: decimal
  +is_top_rated: boolean
  +category: string
  +availability: enum
  +languages: json
}

class ClientProfile {
  +company_name: string
  +industry: string
  +total_spent: decimal
  +payment_verified: boolean
}

class Contract {
  +title: string
  +type: enum[hourly|fixed]
  +amount: decimal
  +escrow_amount: decimal
  +status: enum
  +deadline_at: timestamp
  +is_archived: boolean
  +dispute_reason: text
  +dispute_resolved_at: timestamp
}

class Milestone {
  +title: string
  +amount: decimal
  +status: enum
  +due_at: timestamp
  +submitted_at: timestamp
  +approved_at: timestamp
  +submission_note: text
}

class TimeLog {
  +started_at: timestamp
  +stopped_at: timestamp
  +minutes: int
  +note: string
}

class ContractExtension {
  +old_deadline: timestamp
  +new_deadline: timestamp
  +reason: text
  +status: enum[pending|accepted|rejected]
}

class ContractFile {
  +name: string
  +path: string
  +size: int
  +version: int
  +uploaded_by_id: int
}

class ContractActivity {
  +event: string
  +metadata: json
  +performed_by_id: int
}

class Agency {
  +name: string
  +slug: string
  +description: text
  +logo: string
  +owner_id: int
}

class AgencyMember {
  +agency_id: int
  +user_id: int
  +role: enum[owner|admin|member]
}

class AgencyInvitation {
  +email: string
  +token: string
  +role: enum
  +expires_at: timestamp
}

class CatalogProject {
  +title: string
  +slug: string
  +description: text
  +status: enum[pending|approved|rejected]
  +tiers: json
  +category: string
}

class CatalogOrder {
  +tier: enum[basic|standard|premium]
  +price: decimal
  +status: enum
  +delivery_note: text
}

class IdentityVerification {
  +document_type: enum
  +document_front: string
  +document_back: string
  +selfie: string
  +status: enum[pending|approved|rejected]
  +admin_notes: text
}

class TaxDocument {
  +type: enum[W9|W8BEN|VAT]
  +data: json
  +pdf_path: string
  +status: enum
}

class Subscription {
  +stripe_id: string
  +stripe_status: string
  +stripe_price: string
  +trial_ends_at: timestamp
  +ends_at: timestamp
}

class Wallet {
  +balance: decimal
  +pending_balance: decimal
  +escrow_balance: decimal
}

class Withdrawal {
  +amount: decimal
  +fee: decimal
  +net_amount: decimal
  +status: enum[pending|approved|rejected]
  +stripe_transfer_id: string
}

class WeeklyInvoice {
  +week_start: date
  +week_end: date
  +hours: decimal
  +rate: decimal
  +total: decimal
  +status: enum[pending|paid]
}

class TalentList {
  +name: string
  +description: text
  +is_private: boolean
}

class Message {
  +body: text
  +type: enum[text|file|image]
  +is_read: boolean
  +edited_at: timestamp
  +deleted_at: timestamp
}

class MessageReaction {
  +emoji: string
  +user_id: int
  +message_id: int
}

class AuditLog {
  +user_id: int
  +action: string
  +metadata: json
  +ip_address: string
}

User "1" *-- "0..1" FreelancerProfile
User "1" *-- "0..1" ClientProfile
User "1" *-- "1"    Wallet
User "1" o-- "N"    Contract : client/freelancer
User "1" o-- "N"    AuditLog
User "1" o-- "0..1" IdentityVerification
User "1" o-- "0..1" TaxDocument
User "1" o-- "0..1" Subscription

Contract "1" *-- "N" Milestone
Contract "1" *-- "N" TimeLog
Contract "1" *-- "N" ContractFile
Contract "1" *-- "N" ContractExtension
Contract "1" *-- "N" ContractActivity

Agency "1" *-- "N" AgencyMember
Agency "1" *-- "N" AgencyInvitation

CatalogProject "1" *-- "N" CatalogOrder

Wallet "1" *-- "N" Withdrawal
Wallet "1" *-- "N" WeeklyInvoice

Message "1" *-- "N" MessageReaction

User "N" -- "N" TalentList : membre de
@enduml